votingapp/k8s-manifests/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-votingapp-routes
  namespace: gw-votingapp
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: votingapp
  to:
  - group: ""
    kind: Service
